[package]
name = "gml-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"