[package]
name = "gml"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gml"
path = "src/main.rs"

[dependencies]
gml-core = { path = "../core" }
gml-lambda = { path = "../lambda" }
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
comfy-table = "=7.1.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
indicatif = "0.17"
sysinfo = "0.30"
humantime = "2.1"
colored_json = "2.1"

