[package]
name = "gml-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
gml-core = { path = "../../core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["time"] }
